# coalaHs

./: README.md  coalaHs.cabal  stack.yaml
docs/: Coala-Input-SingleFile.html  Coala-Input.html  Coala-Result.html  Coala.html  coalaHs.haddock  coalaHs.txt  doc-index.html  index-frames.html  index.html  mini_Coala-Input-SingleFile.html  mini_Coala-Input.html  mini_Coala-Result.html  mini_Coala.html
docs/src/: Coala-Input-SingleFile.html  Coala-Input.html  Coala-Result.html  Coala.html
src/: Coala.hs
src/Coala/: Input.hs
src/Coala/Input/: SingleFile.hs
