name:                coalaHs
version:             0.1.0.0
synopsis:            Glue Code for Coala Bears written in Haskell
description:         Please see README.md
homepage:            https://github.com/maweki/coalaHs
license:             GPL-3
license-file:        LICENSE
author:              Mario Wenzel
maintainer:          maweki@gmail.com
copyright:           2016 Mario Wenzel
category:            Coding
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Coala, Coala.Input, Coala.Input.SingleFile
  build-depends:       base >= 4.7 && < 5, containers, text, aeson, bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maweki/coalaHs
